// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-form-components-validator appends missing address field if required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-billing-address></sc-order-billing-address>
  <sc-order-shipping-address></sc-order-shipping-address>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing address field with shipping address required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-billing-address></sc-order-billing-address>
  <sc-order-shipping-address></sc-order-shipping-address>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing billing address field if missing 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator appends missing tax id input if required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-shipping-address></sc-order-shipping-address>
  <sc-order-tax-id-input></sc-order-tax-id-input>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator renders 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator requires the customer name on sc-customer-name if present in page and shipping address required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-billing-address></sc-order-billing-address>
  <sc-order-shipping-address></sc-order-shipping-address>
  <sc-payment></sc-payment>
  <sc-customer-name></sc-customer-name>
</sc-form-components-validator>
`;

exports[`sc-form-components-validator requires the customer name on sc-order-shipping-address if shipping address is required 1`] = `
<sc-form-components-validator>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <sc-order-billing-address></sc-order-billing-address>
  <sc-order-shipping-address></sc-order-shipping-address>
  <sc-payment></sc-payment>
</sc-form-components-validator>
`;
